# ss25_mathe

./: .gitignore  README.md  pyproject.toml  testing.py
agent/: agent.py
docs/: system_prompt.txt
test/agent/: test_agent.py
test/tools/: test_calculate_math_tool.py  test_gemini_formatter.py  test_numeric_math_tool.py  test_plotting_tool.py  test_symbolic_math_tool.py
tools/: calculate_math_tool.py  gemini_formatter.py  numeric_math_tool.py  ollama_adapter.py  ollama_formatter.py  plotting_tool.py  symbolic_math_tool.py  tools.py
