[project]
name = "toolagentlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.19.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "sympy>=1.14.0",
]
